Bug 121531 - UI: Impossible to manually change the value of the angle/rotation in the properties dialog of a shape
Summary: UI: Impossible to manually change the value of the angle/rotation in the prop...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0.1 target:6.3.0
Keywords: bibisected, bisected, regression
: 121473 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-19 21:59 UTC by Cor Nouws
Modified: 2018-11-22 10:47 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2018-11-19 21:59:24 UTC
Start Draw document
Add a shape (rectangle)
F4 for dialog Position and Size, tab Rotation
Put focus on filed Angle, select value
Type different value
  > Input is ignored

(Rotation can be set with +/- or the other widget)

Found in Version: 6.2.0.0.alpha1+
Build ID: 32865e69c9774d5545a3100158798b6763ff62f0
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-16_22:22:59
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Urber Guintoru 2018-11-20 09:26:33 UTC
Confirmed.

A temporary solution is pressing TAB on the keyboard to change focus.
The same problema appears in the size tab with "keep ratio" enabled: the change is applied only to the manually modified dimension, the other dimension is not changed.


Version: 6.1.3.2
Build ID: 86daf60bf00efa86ad547e59e09d6bb77c699acb
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: it-IT (it_IT); Calc: threaded
Comment 2 Xisco Faulí 2018-11-21 12:13:53 UTC
this is a regression in master, not in 6.1.3.2:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=32eac27a2c22aae63941479482ef21e8d75a5122

author	Caolán McNamara <caolanm@redhat.com>	2018-09-21 17:09:42 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-22 20:28:23 +0200
commit 32eac27a2c22aae63941479482ef21e8d75a5122 (patch)
tree 64e7e5dff4ac0fbd7c117b398e365a0728fdde1e
parent 47f84e024344d9a50e44dda4f947945e8fc643b5 (diff)
weld AlignmentTabPage

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 3 Commit Notification 2018-11-21 23:49:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/04fbc01af362ca858e560d305320e50161acc5fa%5E%21

Resolves: tdf#121531 impossible to change angle/rotation by text input

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-11-21 23:49:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/8342db057d0538334e97d575a992ce0f2cbb7e2e%5E%21

Resolves: tdf#121531 impossible to change angle/rotation by text input

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Luke 2018-11-22 04:33:15 UTC
*** Bug 121473 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2018-11-22 10:47:01 UTC
Verified in

Version: 6.2.0.0.beta1+
Build ID: a5bb6a0406d0018d1df279b925c80b392d9db277
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for the quick fix!!!