Resolves: tdf#121531 impossible to change angle/rotation by text input

Change-Id: Ic5fb01ac088cc777534e7986001defb61bc6ee60